k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-challenge
spec:
  selector:
    app: k8s-challenge
  ports:
    - port: 4000
