k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8s-challenge
spec:
  backend:
    serviceName: k8s-challenge
    servicePort: 4000
